# fusion-cdt-community-reading-list

./: .gitignore  README.md  giscus.json  main.py  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: index.md
docs/literature/: highcock2012zero-turbulence.md  howes2006astro-gyrokinetics.md  index.md
docs/literature/materials/: index.md
docs/literature/plasma/: index.md
docs/literature/plasma/ICF/: index.md
docs/literature/plasma/LTP/: index.md
docs/literature/plasma/MCF/: index.md
docs/literature/plasma/MCF/gyrokinetics/: abel2013multiscale-gyrokinetics.md  highcock2012zero-turbulence.md  howes2006astro-gyrokinetics.md
docs/literature/plasma/MCF/zonal-flows/: itoh2006zona-flows.md
docs/stylesheets/: reference.css
docs/tutorials/: gyrokinetic-codes.md  gyrokinetic-theory.md  index.md
overrides/partials/: comments.html
scripts/: bibtex_reference.py
site/: 404.html  index.html
site/markdown/: index.html
