[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fusion-cdt-community-reading-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "zensical>=0.0.21",
]

[tool.hatch.build.targets.wheel]
include = ["scripts/bibtex_reference.py"]

[tool.hatch.build.targets.wheel.sources]
"scripts" = ""
